# ribbon

./: .editorconfig  .gitignore  Cargo.toml  README.md  memchk.sh  memtest-r.sh  memtest.sh  mwain.rs  prototype.md  test.sh
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/ctors/: mod.rs
crates/api/src/instance/: base.rs  internal.rs  mod.rs  prelude.rs
crates/api/src/instance/classes/: base_part.rs  mod.rs  part.rs  pv_instance.rs
crates/api/src/instance/pv/: mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/instance/: class_name.rs  error.rs  internal.rs  lua.rs  mod.rs  prelude.rs  traits.rs
engine/: Cargo.toml
engine/src/: lib.rs  private.rs
engine/src/instance/: any_instance.rs  class_name.rs  errors.rs  lua.rs  mod.rs  prelude.rs  ref.rs  traits.rs  utils.rs
engine/src/instance/classes/: base_instance.rs  base_part.rs  base_script.rs  cloud.rs  data_model.rs  http_service.rs  lua_source_container.rs  mod.rs  model.rs  part.rs  prelude.rs  pv_instance.rs  ribbon_manager.rs  script.rs  service_provider.rs  string_value.rs  value_base.rs  workspace.rs  world_root.rs
engine/src/lua/: instance.rs
engine/src/types/: lua.rs  mod.rs  referent.rs  vectors.rs
engine/tests/: lua.rs
engine/tests/lua/: assertProperty.lua  createInstanceTree.lua  deepEquals.lua
engine/tests/types/: instance.rs  mod.rs  vector3.rs
engine/tests/types/instance/: __index.lua  __newindex.lua  new.lua
engine/tests/types/vector3/: __index.lua  __newindex.lua  __op.lua  compare.lua  constructors.lua  new.lua
src/: main.rs
(+35 files in other folders)
